Grid correction for element spacing

--- a/mnd-design-style.css
+++ b/mnd-design-style.css
@@ -1,7 +1,7 @@
 .wrapper_abou {
   display: grid;
   grid-template-columns: 0.5fr 1fr 1fr 1fr 0.5fr;
-  grid-template-rows: 30px 550px 500px auto;
+  grid-template-rows: 30px 540px 500px auto;
   grid-template-areas:
   "nav nav nav nav nav"
   "header header header header header"
@@ -13,7 +13,7 @@
 .wrapper_proj {
   display: grid;
   grid-template-columns: 0.5fr 1fr 1fr 1fr 0.5fr;
-  grid-template-rows: 30px 550px 500px auto;
+  grid-template-rows: 30px 520px auto;
   grid-template-areas:
   "nav nav nav nav nav"
   "header header header header header"
